--- a/src/components/Card-Team/Card.module.css
+++ b/src/components/Card-Team/Card.module.css
@@ -16,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0 1.5rem;
 }
 
 .container:hover {
