changed footer, css trasformed in scss

--- a/src/pages/ourTeam.module.scss
+++ b/src/pages/ourTeam.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%);
 }
 
 .title-team h1 {
