--- a/src/components/Card-Team/Card.module.scss
+++ b/src/components/Card-Team/Card.module.scss
@@ -1,22 +1,29 @@
 
 
 .container {
-    background-color: #0e1c36;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
     padding: 0 1.5rem;
     box-shadow: rgb(24, 47, 199) 0px 4px 12px;
+    border-radius: 1.3rem;
 }
 
 .card {
     background-color: #0e1c36;
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     color: white;
     padding: 1.5rem 1.5rem 0 1.5rem;
+
+
+    h1 {
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
 }
 
 .container:hover {
