fixed color footer social bloks

--- a/src/theme/Footer/footer.styles.module.scss
+++ b/src/theme/Footer/footer.styles.module.scss
@@ -106,6 +106,7 @@
     align-content: center;
     align-items: center;
     cursor: pointer;
+    color: white;
 
     &:hover {
       background-color: #00a400;
