--- a/src/pages/ourTeam.module.scss
+++ b/src/pages/ourTeam.module.scss
@@ -1,22 +1,163 @@
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%);
+//.wrapper {
+//    display: flex;
+//    flex-direction: column;
+//    justify-content: center;
+//    align-items: center;
+//    background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%);
+//}
+//
+//.title-team h1 {
+//    font-size: 3rem;
+//    padding: 1.5rem 0;
+//}
+//
+//.container-card {
+//    display: flex;
+//    flex-flow: row wrap;
+//    gap: 2.5rem;
+//    justify-content: center;
+//    align-items: center;
+//    margin: auto 10rem;
+//    padding-bottom: 2.5rem;
+//}
+
+//Container
+.container {
+  max-width: 1170px;
+  width: 100%;
+  margin: 2.5rem auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+  transform-origin: top center;
+  transform: scale(0.8);
+
+  // Section
+  .section {
+
+    &__title {
+      margin: 0 0 2.5rem;
+      color: #ead637;
+      font-family: MonumentExtended-Black-H1, sans-serif;
+      font-size: 3.5rem;
+      font-weight: 300;
+      line-height: 2.625rem;
+      text-align: center;
+    }
+  }
+
+
 }
 
-.title-team h1 {
-    font-size: 3rem;
-    padding: 1.5rem 0;
+// Grid
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0 0;
+  grid-template-areas:
+    ". . ."
+    ". . ."
+    ". . ."
+    ". . ."
+    ". . .";
+
+
+  // Column
+
+  .column {
+    //border: 2px black solid;
+    width: 20rem;
+    height: 20rem;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
+    &:hover {
+      z-index: 1;
+      box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
+      transform: scale(1.05);
+      transition: box-shadow 0.2s ease, transform 0.2s ease, z-index 0s 0s ease;
+    }
+    .user {
+      text-align: center;
+      padding: 0.5rem 0;
+
+      &__avatar {
+
+        /* make a square container */
+        width: 120px;
+        height: 120px;
+        margin: auto;
+
+        /* fill the container, preserving aspect ratio, and cropping to fit */
+        background-size: cover;
+
+        /* center the image vertically and horizontally */
+        background-position: top center;
+
+        /* round the edges to a circle with border radius 1/2 container size */
+        border-radius: 50%;
+
+      }
+
+      &__name {
+        color: #313435;
+        font-size: 1.5rem;
+        font-weight: 500;
+        line-height: 2.625rem;
+      }
+
+      &__title {
+        color: #6F808A;
+        font-size: 0.875rem;
+        line-height: 2.375rem;
+      }
+
+      .social {
+        display: flex;
+        list-style-type: none;
+        justify-content: center;
+        align-self: center;
+        align-content: center;
+
+
+
+        &__item {
+          display: flex;
+          justify-content: center;
+
+          margin: 0 10px;
+
+
+          a {
+
+          }
+
+          svg {
+            fill: #515F65;
+
+            height: 18px;
+            transition: fill 0.2s ease;
+
+            &:hover {
+              fill: #788D96;
+            }
+          }
+        }
+
+
+      }
+    }
+  }
 }
 
-.container-card {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 2.5rem;
-    justify-content: center;
-    align-items: center;
-    margin: auto 10rem;
-    padding-bottom: 2.5rem;
-}
+
+
+
+
+
+
+
+
+
