--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -178,7 +178,12 @@ svg {
 // MarkDown
 .markdown {
   padding: 2.5rem;
+
+  & li {
+    color: white;
+  }
 }
+
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 /*[data-theme='dark'] {*/
@@ -218,8 +223,8 @@ svg {
 
   //background: radial-gradient(circle, rgba(36,123,160,1) 25%, rgba(14,28,54,1) 80%);
   //background: radial-gradient(circle, rgba(36,123,160,0.5973739837731968) 0%, rgba(14,28,54,1) 100%);
-  background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%);
-  color: #ffffff;
+  background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%) !important;
+  color: #ffffff !important;
 }
 
 
