--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -51,6 +51,8 @@
   --ifm-color-primary-lighter: #ffffff;
   --ifm-color-primary-lightest: #ffffff;
 
+  --ifm-color-scheme: dark;
+
   background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%);
   background-repeat: no-repeat;
   background-attachment: fixed;
