--- a/src/pages/ourTeam.module.scss
+++ b/src/pages/ourTeam.module.scss
@@ -66,18 +66,24 @@
 
   .column {
     //border: 2px black solid;
-    width: 20rem;
-    height: 20rem;
+    width: 25rem;
+    height: 25rem;
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
+    background: white;
 
     &:hover {
       z-index: 1;
       box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
       transform: scale(1.05);
       transition: box-shadow 0.2s ease, transform 0.2s ease, z-index 0s 0s ease;
+
+      .social {
+        opacity: 1 !important;
+        transform: translateY(10px) !important;
+      }
     }
     .user {
       text-align: center;
@@ -114,23 +120,34 @@
         line-height: 2.375rem;
       }
 
+
       .social {
         display: flex;
         list-style-type: none;
-        justify-content: center;
         align-self: center;
         align-content: center;
+        opacity: 0;
+        transform: translateY(100%);
+        transition: transform 0.2s ease,
+        opacity 0.2s ease;
+
+
+        a, svg {
+          text-align: center;
+          font-size: 2.5rem;
+        }
 
 
 
         &__item {
-          display: flex;
-          justify-content: center;
 
-          margin: 0 10px;
-
+          a:last-child {
+            padding: 1rem 0;
+            margin-right: 1rem;
+          }
 
           a {
+            display: flex;
 
           }
 
@@ -141,7 +158,8 @@
             transition: fill 0.2s ease;
 
             &:hover {
-              fill: #788D96;
+              transform: scale(1.3) !important;
+              fill: #ead637 !important;
             }
           }
         }
@@ -153,7 +171,37 @@
 }
 
 
+@media (max-width: 900px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0 0;
+    grid-template-areas:
+    ". ."
+    ". ."
+    ". ."
+    ". ."
+    ". .";
 
+    padding-bottom: 0;
+    margin-bottom: 0;
+
+  }
+
+}
+
+@media (max-width: 600px) {
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100% !important;
+    max-width: 100% !important;
+    min-width: 100% !important;
+    flex-basis: 100% !important;
+  }
+
+}
 
 
 
