--- a/src/pages/ourTeam.module.scss
+++ b/src/pages/ourTeam.module.scss
@@ -1,31 +1,18 @@
-//.wrapper {
-//    display: flex;
-//    flex-direction: column;
-//    justify-content: center;
-//    align-items: center;
-//    background: linear-gradient(180deg, rgba(14,28,54,1) 10%, rgba(36,123,160,0.5) 98%);
-//}
-//
-//.title-team h1 {
-//    font-size: 3rem;
-//    padding: 1.5rem 0;
-//}
-//
-//.container-card {
-//    display: flex;
-//    flex-flow: row wrap;
-//    gap: 2.5rem;
-//    justify-content: center;
-//    align-items: center;
-//    margin: auto 10rem;
-//    padding-bottom: 2.5rem;
-//}
-
+/////////////////////////////////////////////////////////////////////////////////////
 //Container
-.container {
-  max-width: 1170px;
+.wrapper_grid {
+  //background: #00a400;
+  padding: 0;
+  margin: 0;
   width: 100%;
-  margin: 2.5rem auto;
+  height: auto;
+
+}
+
+.container {
+  //max-width: 1170px;
+  width: 100%;
+  margin: 3.5rem auto 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
   transform-origin: top center;
@@ -42,6 +29,13 @@
       font-weight: 300;
       line-height: 2.625rem;
       text-align: center;
+      text-transform: uppercase;
+      white-space: nowrap;
+    }
+
+    .space__team__wrap {
+      line-height: 50px !important;
+      white-space: normal !important;
     }
   }
 
@@ -51,16 +45,8 @@
 // Grid
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  gap: 0 0;
-  grid-template-areas:
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . .";
-
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2.5rem 0;
 
   // Column
 
@@ -72,12 +58,12 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    background: white;
-
+    border-radius: 0.8rem;
+    background: #0E1C36FF;
     &:hover {
       z-index: 1;
-      box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
-      transform: scale(1.05);
+      //box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
+      box-shadow: rgb(64, 249, 155) 0px 1px 10px;      transform: scale(1.05);
       transition: box-shadow 0.2s ease, transform 0.2s ease, z-index 0s 0s ease;
 
       .social {
@@ -92,8 +78,8 @@
       &__avatar {
 
         /* make a square container */
-        width: 120px;
-        height: 120px;
+        width: 190px;
+        height: 190px;
         margin: auto;
 
         /* fill the container, preserving aspect ratio, and cropping to fit */
@@ -108,14 +94,14 @@
       }
 
       &__name {
-        color: #313435;
+        color: #ead637;
         font-size: 1.5rem;
         font-weight: 500;
         line-height: 2.625rem;
       }
 
       &__title {
-        color: #6F808A;
+        color: #ffffff;
         font-size: 0.875rem;
         line-height: 2.375rem;
       }
@@ -152,14 +138,14 @@
           }
 
           svg {
-            fill: #515F65;
+            fill: #ffffff;
 
             height: 18px;
             transition: fill 0.2s ease;
 
             &:hover {
               transform: scale(1.3) !important;
-              fill: #ead637 !important;
+              fill: #40f99b !important;
             }
           }
         }
@@ -171,18 +157,153 @@
 }
 
 
-@media (max-width: 900px) {
+//// Advisor
+
+.wrapper_advisor {
+  background: #0E1C36FF;
+  height: 100%;
+  width: 100%;
+  margin-top: -15rem;
+
+  // TITLE
+  .section__title {
+    padding: 1.5rem 0 .5rem 0;
+    color: #ead637;
+    font-family: MonumentExtended-Black-H1, sans-serif;
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 2.625rem;
+    text-align: center;
+    text-transform: uppercase;
+    white-space: nowrap;
+  }
+
+  .space__team__wrap {
+    line-height: 50px !important;
+    white-space: normal !important;
+  }
+
+  .container_advisor {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+
+    .advisor_box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      //background: grey;
+      margin: 2rem;
+
+      &__img img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: flex;
+        border-radius: .8rem;
+        margin: 1.5rem 1.5rem;
+      }
+
+      &__info {
+        display: flex;
+        flex-direction: column;
+        padding: 0 2rem;
+        margin: 1.5rem 0 0 1.5rem;
+      }
+
+      &__title {
+
+      }
+
+      &__text {
+
+      }
+    }
+  }
+
+}
+
+// @MEDIA
+
+@media (max-width: 1110px) {
+  // THE TEAM
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  // THE TEAM
+
+  // THE ADVISOR
+  .wrapper_advisor {
+    margin-top: -20rem;
+
+
+    .advisor_box__img img {
+      width: 60rem !important;
+      height: 20rem !important;
+    }
+
+  }
+  // THE ADVISOR
+
+}
+
+//
+@media only screen and (max-width: 1024px) {
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3.5rem !important;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  // THEN TEAM
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2.5rem !important;
+  }
+  // THE TEAM
+
+  // THE ADVISOR
+  .wrapper_advisor {
+
+
+
+    .container_advisor {
+
+      .advisor_box__img {
+        display: flex;
+        align-items: flex-start;
+        width: 30rem !important;
+        height: 100% !important;
+      }
+
+      .advisor_box {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+
+  // THE ADVISOR
+}
+
+
+@media only screen and (max-width: 900px) {
+
+  .container {
+    margin: 2.5rem auto 0 auto;
+  }
+
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 0 0;
-    grid-template-areas:
-    ". ."
-    ". ."
-    ". ."
-    ". ."
-    ". .";
 
     padding-bottom: 0;
     margin-bottom: 0;
@@ -191,16 +312,79 @@
 
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
+
+  // THE TEAM
+
+  .container {
+    margin: 2.5rem auto -10rem auto;
+  }
+
+  .space__team__wrap {
+    line-height: 50px !important;
+    white-space: normal !important;
+  }
+
   .grid {
     display: flex;
     flex-wrap: wrap;
+    gap: 2rem;
     width: 100% !important;
     max-width: 100% !important;
     min-width: 100% !important;
     flex-basis: 100% !important;
   }
 
+  // THE TEAM
+
+  // THE ADVISOR
+  .wrapper_advisor {
+    margin-top: -50rem;
+
+
+    .container_advisor {
+
+      .advisor_box__img img {
+        display: flex;
+        align-items: flex-start;
+        height: 100% !important;
+        margin: 0 auto;
+      }
+
+      .advisor_box {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+  // THE ADVISOR
+
+
+}
+
+@media only screen and (max-width: 600px) {
+  // THE ADVISOR
+  .wrapper_advisor {
+
+
+    .container_advisor {
+      display: flex;
+      justify-content: center;
+
+      .advisor_box__img {
+        display: flex;
+        align-items: flex-start;
+        width: auto !important;
+        height: 100% !important;
+      }
+
+      .advisor_box {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+  // THE ADVISOR
 }
 
 
