--- a/src/theme/Footer/footer.styles.module.scss
+++ b/src/theme/Footer/footer.styles.module.scss
@@ -187,7 +187,7 @@
 
 @media only screen and (max-width: 500px){
   .wrapper__footer {
-    padding: 0 0 0 0;
+    padding: 1rem 1rem 1rem 1rem;
   }
 
   .footer__col1__text {
@@ -215,6 +215,51 @@
       li {
         padding-top: 0;
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 380px){
+  .wrapper__footer {
+    padding: 1rem 1rem 1rem 1rem;
+  }
+
+  .footer__col1__text {
+
+    width: 100%;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+
+    & > div {
+      padding-top: 2.5rem;
+    }
+
+    .container__links {
+      display: flex;
+      flex-direction: column;
+
+      .heading {
+        padding: 0;
+        margin-bottom: 1rem;
+      }
+
+      li {
+        padding-top: 0;
+      }
+    }
+  }
+
+  .container__social__blocks {
+    display: flex;
+    flex-direction: column;
+
+    .social__block__item {
+      height: 5rem !important;
+      padding: 1rem 0;
     }
   }
 }
